--- a/common-service/src/main/filters/application-filter-dev.properties
+++ b/common-service/src/main/filters/application-filter-dev.properties
@@ -1,4 +1,21 @@
 user-service.port=8010
 order-service.port=8020
 product-service.port=8030
-gateway-service.port=9001
+
+nacos.server-address=localhost:8848
+nacos.group=ssy
+nacos.username=nacos
+nacos.password=nacos
+nacos.file-extension=yaml
+
+spring.cloud.openfeign.client.config.default.connectTimeout=15000
+spring.cloud.openfeign.client.config.default.readTimeout=15000
+spring.cloud.openfeign.client.config.fast.connectTimeout=1000
+spring.cloud.openfeign.client.config.fast.readTimeout=1000
+spring.cloud.openfeign.httpclient.max-connections=200
+spring.cloud.openfeign.httpclient.max-connections-per-route=50
+spring.cloud.loadbalancer.cache.ttl=5s
+
+preserved.heart.beat.interval=3000
+preserved.heart.beat.timeout=3000
+preserved.ip.delete.timeout=5000
