--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -1,12 +1,7 @@
-server:
-  port: ${user-service.port}
-
 spring:
   application:
     name: user-service
-  cloud:
-    nacos:
-      discovery:
-        server-addr: localhost:8848
-        username: nacos
-        password: nacos
+server:
+  port: ${user-service.port}
+jwt:
+  secret-key: 2ad5af5f-85cd-4423-b443-7a4ec30072f7
