--- a/common-service/pom.xml
+++ b/common-service/pom.xml
@@ -77,6 +77,10 @@
             <artifactId>mapstruct</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-spring-webmvc-6x-adapter</artifactId>
+        </dependency>
     </dependencies>
 
 
