--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -1,5 +1,11 @@
 server:
   port: ${order-service.port}
-ssy:
-  username: 松山院
-  site: www.ssy.top
+spring:
+  cloud:
+    sentinel:
+      transport:
+        port: ${sentinel.transport.port.user-service}
+        dashboard: ${sentinel.transport.dashboard}
+#ssy:
+#  username: 松山院
+#  site: www.ssy.top
