--- a/order-service/src/main/resources/bootstrap.yml
+++ b/order-service/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: order-service
+    name: order-service #服务名称
   profiles:
     active: dev
   cloud:
@@ -9,3 +9,11 @@ spring:
         server-addr: ${nacos.server-address}
         group: ${nacos.group}
         file-extension: ${nacos.file-extension}
+#        name: cipher-aes-order-service-$ispring.profiles.active}.yaml
+        username: ${nacos.username}
+        password: ${nacos.password}
+        shared-configs:
+          - dataId: cipher-aes-common-service-${spring.profiles.active}.yaml
+            group: ${nacos.group}
+            refresh: true
+
