--- a/user-service/src/main/resources/bootstrap.yml
+++ b/user-service/src/main/resources/bootstrap.yml
@@ -9,3 +9,9 @@ spring:
         server-addr: ${nacos.server-address}
         group: ${nacos.group}
         file-extension: ${nacos.file-extension}
+        username: ${nacos.username}
+        password: ${nacos.password}
+        shared-configs:
+          - dataId: commom-service-${spring.profiles.active}.yaml
+            group: ${nacos.group}
+            refresh: true
