--- a/api-service/src/main/resources/application-dev.yml
+++ b/api-service/src/main/resources/application-dev.yml
@@ -2,7 +2,7 @@ spring:
   #  数据源配置可以移至 Nacos 配置中心：common-service-dev.yml
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/nacos-service?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8&useSSL=true
+    url: jdbc:mysql://127.0.0.1:3306/nacos?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8&useSSL=true
     username: root
     password: 123456
   jackson:
@@ -10,7 +10,7 @@ spring:
   cloud:
     openfeign:
       client:
-        defaultConfig: fast
+        defaultConfig: fast 
         config:
           default:
             connectTimeout: ${spring.cloud.openfeign.client.config.default.connectTimeout}
