--- a/common-service/src/main/filters/application-filter-dev.properties
+++ b/common-service/src/main/filters/application-filter-dev.properties
@@ -1,8 +1,9 @@
-user-service.port=8010
-order-service.port=8020
-product-service.port=8030
+user-service.port=8011
+order-service.port=8021
+product-service.port=8031
+gateway-service.port=8040
 
-nacos.server-address=localhost:8848
+nacos.server-address=localhost:8844
 nacos.group=ssy
 nacos.username=nacos
 nacos.password=nacos
@@ -19,3 +20,11 @@ spring.cloud.loadbalancer.cache.ttl=5s
 preserved.heart.beat.interval=3000
 preserved.heart.beat.timeout=3000
 preserved.ip.delete.timeout=5000
+
+sentinel.transport.dashboard=localhost:8888
+sentinel.transport.port.user-service=8010
+sentinel.transport.port.order-service=8020
+sentinel.transport.port.product-service=8030
+sentinel.transport.port.gateway-service=8040
+
+sentinel.nacos.group-id=sentinel
